# rayluz-old

./: .gitignore  CMakeLists.txt  README.md
src/: camera_constants.hpp  image_save.cpp  image_save.hpp  main.cpp  ray.hpp  vec3.hpp
